<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI App</string>
    <string name="welcome">Welcome On BMI App !</string>
    <string name="action_settings">Settings</string>
     <string name="next">Next</string>
     <string name="cancel">Exit</string>
     <string name="name">Enter your name : </string>
     <string name="height">Enter your height : </string>
     <string name="weight">Enter your weight : </string>
     <string name="previous">Previous</string>
      <string name="bmi_value">Your BMI is :</string>
     <string name="submit">Submit</string>
       <string name="calcul">Calcul</string>
       <string name="title">YOUR POSITION</string>
       
       <string name="retour">Previous</string>
  
       <string name="error_required">Required</string>
       <string name="error_character_length">Less than 3 Chars</string>
       
       
        <string-array name="b_choice">
       		 <item>B1</item>
       		 <item>B2</item>
        	<item>B3</item>
    </string-array>

    
   
</resources>
