<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:background="@drawable/galaxy_wallpaper"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mobileapp.bmi_ator.MainActivity" >

    <Button
        android:id="@+id/Bt_Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Bt_Submit"
        android:layout_alignBottom="@+id/Bt_Submit"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/cancel" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="@+assets/Gravity_Light.ttf" />

        <EditText
            android:id="@+id/EditTextName"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="@+assets/Gravity_Light.ttf" />

        <EditText
            android:id="@+id/EditTextHeight"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="meters"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:typeface="@+assets/Gravity_Light.ttf" />

        <EditText
            android:id="@+id/EditTextWeight"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="kilogram"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/Bt_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:typeface="@+assets/Gravity_Light.ttf" />

    <Button
        android:id="@+id/Bt_Calcul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Bt_Submit"
        android:layout_alignBottom="@+id/Bt_Submit"
        android:text="@string/calcul" 
        android:layout_marginLeft="210dp"/>


    <Spinner
    android:id="@+id/Sp_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>